--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-# URL base de tu API backend
+# Firebase Configuration
+REACT_APP_FIREBASE_API_KEY=AIzaSyA5FpZnsj7UhN7jl28oeW5b_5zTZZZn5x0
+REACT_APP_FIREBASE_AUTH_DOMAIN=proyecto-8a636.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=proyecto-8a636
+REACT_APP_FIREBASE_STORAGE_BUCKET=proyecto-8a636.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1029119758525
+REACT_APP_FIREBASE_APP_ID=1:1029119758525:web:9d1aff954be0ab86ce27d4
+
+# URL base de tu API backend (backup)
 REACT_APP_API_BASE=http://localhost:3000/api
 
