--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Minimal .gitignore for this React project
 
-# dependencies
+# Node modules
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
+# Build output
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Local env file (contains secrets)
+.env
 
+# Logs
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# macOS
+.DS_Store
